--- a/.github/workflows/multiple_shells.yaml
+++ b/.github/workflows/multiple_shells.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - "main"
   pull_request:
-    types: [closed, assigned, opened, reopened]
+    types: [closed, assigned, opened]
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
